--- a/index.html
+++ b/index.html
@@ -16,11 +16,19 @@
 
       <!-- TODO: PART I Add your own images and use CSS flex to make sure they work on different screen sizes -->
       <div class="gallery-container">
-        <img class="gallery-item" src="./assets/jeff.jpg" alt="jeff watching u">
+          <img class="gallery-item" src="./assets/jeff.jpg" alt="jeff watching u" style="width: 200px">
+          <img class="gallery-item" src="./images/moonrise_kingdom.jpg" alt="moonrise kingdom">
+          <img class="gallery-item" src="./images/conformist1.jpg" alt="conformist">
+          <img class="gallery-item" src="./images/i_care_a_lot1.png" alt="i care a lot">
+          <img class="gallery-item" src="./images/spiritedawaytrain.jpg" alt="train in spirited away">
+          <img class="gallery-item" src="./images/killbill1.png" alt="kill bill">
       </div>
 
       <!-- TODO: PART II Uncomment the line below, and hook up this button to display data from an API -->
-      <!-- <button onclick="updatePage()">Press this button to display some fruit data</button> -->
+       <div class="button-centered">
+           <button onclick="updatePage()">Press this button to display some fruit data</button>
+       </div>
+
     </div>
   </body>
 
